--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,17 +44,17 @@ textarea {
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: #000;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: #000;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: #000;
 }
 
 .saveBtn {
